add api handlers for teams
